ocp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marcus-lernia-app
  annotations:
    image.openshift.io/triggers: '[{
      "from": {
        "kind": "ImageStreamTag",
        "name": "marcus-lernia-app:latest"
      },
      "fieldPath": "spec.template.spec.containers[?(@.name==\"marcus-lernia-app\")].image"
    }]'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: marcus-lernia-app
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: marcus-lernia-app
    spec:
      containers:
      - name: marcus-lernia-app
        image: marcus-lernia-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
